--- a/package.json
+++ b/package.json
@@ -47,5 +47,8 @@
     "autoprefixer": "^10.4.23",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
